Update the classification workflow with examples of attractor and custom classification archives.

--- a/example/workflow/classification.ipynb
+++ b/example/workflow/classification.ipynb
@@ -9,9 +9,11 @@
     }
    },
    "source": [
-    "# HCTL Model Checking\n",
+    "# Property classification\n",
     "\n",
     "This notebook illustrates the capability of AEON.py to classify BN models with respect to dynamic properties. It also shows how to load and generate \"arbitrary\" classification archives.\n",
+    "\n",
+    "In particular, we first demonstrate in detail how to classify the behaviour of a BN model based on HCTL properties, and then we briefly show other methods that can create different \"classification archives\". Note that all such archives can be explored using the [BN Classifier](https://github.com/sybila/biodivine-bn-classifier) user iterface.\n",
     "\n",
     "This notebook assumes that you already have a basic understanding of AEON.py as presented in the remaining notebooks in this folder. However, you should be able to follow this tutorial even if you have not read the remaining notebooks, just keep in mind that you can find more information about the presented features there."
    ]
@@ -37,7 +39,9 @@
    "id": "cc83b580",
    "metadata": {},
    "source": [
-    "#### Exploring input format for classification"
+    "### HCTL classification\n",
+    "\n",
+    "#### Exploring input format for HCTL classification"
    ]
   },
   {
@@ -49,14 +53,14 @@
     }
    },
    "source": [
-    "We first demonstrate how the input for the classification looks like.\n",
+    "We first demonstrate how the input for the HCTL classification looks like.\n",
     "\n",
-    "It is essentially a combination of \n",
-    "- a partially specified Boolean network in AEON format\n",
-    "- dynamic assertions (HCTL formulae) that all valid concretizations must satisfy\n",
-    "- dynamic properties (HCTL formulae) that are used to categorize the valid models\n",
+    "It is essentially a combination of:\n",
+    "- A partially specified Boolean network in the AEON format.\n",
+    "- Dynamic assertions (HCTL formulae) which restrict the set of valid model concretizations.\n",
+    "- Dynamic properties (HCTL formulae) that are used to classify the valid models.\n",
     "\n",
-    "The assertions/properties are given as model annotations. Let's explore how it is done."
+    "The assertions/properties are given as model annotations. Let's explore how this is done."
    ]
   },
   {
@@ -69,23 +73,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "# Note that some of the following properties have (slightly) simpler but equivalent formulas.\n",
+      "# However, we use these formulas to demonstrate various features of HCTL.\n",
+      "\n",
+      "\n",
       "### Assertions\n",
       "\n",
-      "# There must be an attractor with a state where at least one of the phenotypes activated.\n",
+      "# There exists a state that is (a) in an attractor, and (b) with at least one phenotype variable active.\n",
       "#! dynamic_assertion: #`3{x}: @{x}: ((!{y}: AG EF {y}) & (Apoptosis | Growth_Arrest | Proliferation))`#\n",
+      "\n",
       "\n",
       "### Properties\n",
       "\n",
-      "# The only attractors are fixed points with active Apoptosis (system always converges to the programmed cell death).\n",
+      "# The only attractors are fixed points with active `Apoptosis` (system always converges\n",
+      "# to the programmed cell death).\n",
       "#! dynamic_property: p1: #`V{x}: @{x}: ((!{y}: AG EF {y}) => ((AX {x}) & Apoptosis))`#\n",
       "\n",
-      "# Growth_arrest is stably activated in an attractor.\n",
+      "# `Growth_arrest` is active and stable in some attractor.\n",
       "#! dynamic_property: p2: #`3{x}: @{x}: ((!{y}: AG EF {y}) & Growth_Arrest & ~(EF ~Growth_Arrest))`#\n",
       "\n",
-      "# Proliferation is stably activated in an attractor.\n",
+      "# `Proliferation` is active and stable in some attractor.\n",
       "#! dynamic_property: p3: #`3{x}: @{x}: ((!{y}: AG EF {y}) & Proliferation & ~(EF ~Proliferation))`#\n",
       "\n",
-      "# Proliferation and Apoptosis are simultaneously active in an attractor state.\n",
+      "# `Proliferation` and `Apoptosis` are simultaneously active in some attractor state.\n",
       "#! dynamic_property: p4: #`3{x}: @{x}: ((!{y}: AG EF {y}) & Apoptosis & Proliferation)`#\n",
       "\n",
       "### Model\n",
@@ -178,7 +188,7 @@
    "id": "226a38a5",
    "metadata": {},
    "source": [
-    "We can automatically obtain the assertions/properties from the model file annotations and explore them."
+    "We can automatically read the assertions/properties from the model file annotations and list them."
    ]
   },
   {
@@ -217,7 +227,7 @@
    "id": "386a13c7",
    "metadata": {},
    "source": [
-    "We see that assertions are just simple HCTL formulae (in our case a single one). On the other hand, properties also have names, which are used in processing the classification results."
+    "We see that assertions are just simple HCTL formulae (in our case a single formula). On the other hand, properties also have names, which are used in post-processing of the classification results."
    ]
   },
   {
@@ -225,7 +235,7 @@
    "id": "bb63b81c",
    "metadata": {},
    "source": [
-    "#### Running the classification procedure"
+    "#### Running the HCTL classification procedure"
    ]
   },
   {
@@ -235,12 +245,12 @@
    "source": [
     "The classifier categorizes the concrete BNs (parametrizations of the PSBN or colors) to classes based on properties they satisfy. First, only the colors satisfying all assertions are computed. The set of remaining colors is decomposed into categories, where each class contains colors that (universally) satisfy the same set of properties.\n",
     "\n",
-    "It is however fairly straightforward to run the classification. You just provide path to the annotated model file, and path for the result bundle, everything else is handled internally.\n",
+    "It is however fairly straightforward to run the classification. You just provide a path to the annotated model file, and a path for the result bundle, everything else is handled internally.\n",
     "\n",
-    "The result is an archive with\n",
-    "- report on the whole classification procedure\n",
-    "- raw BDD files encoding each non-empty class\n",
-    "- original annotated aeon model (to reconstruct the results)"
+    "The result is a zip archive with:\n",
+    "- A report of the whole classification procedure.\n",
+    "- Raw BDD files encoding each non-empty class.\n",
+    "- The original annotated aeon model input (to reconstruct the results if needed)."
    ]
   },
   {
@@ -268,14 +278,14 @@
       "Evaluating properties...\n",
       "Properties evaluated.\n",
       "Classifying based on model-checking results...\n",
-      "Results saved to classification_archive.zip.\n"
+      "Results saved to classification-archive.zip.\n"
      ]
     }
    ],
    "source": [
     "model_path = \"mapk-annotated.aeon\"\n",
-    "output_zip = \"classification_archive.zip\"\n",
-    "run_classification(model_path, output_zip)"
+    "output_zip = \"classification-archive.zip\"\n",
+    "run_hctl_classification(model_path, output_zip)"
    ]
   },
   {
@@ -283,10 +293,10 @@
    "id": "52f98c05",
    "metadata": {},
    "source": [
-    "You recommend loading the output into our interactive [GUI explorer](https://github.com/sybila/biodivine-bn-classifier).\n",
-    "However, you can explore the archive manually, or analyze it here in Python too.\n",
+    "We recommend loading the output into our interactive [GUI explorer](https://github.com/sybila/biodivine-bn-classifier).\n",
+    "However, you can explore the archive manually, or analyze it here in Python as well (see `load_class_archive` below).\n",
     "\n",
-    "We can load the dictionary with all categories - a map of `string -> color set`. The string is a binary encoding of which properties are satisfied by the class."
+    "We can load the dictionary with all categories—a map of `string -> color set` pairs. The string \"key\" represents a binary encoding of which properties are satisfied by the particular class (in this encoding, properties are ordered alphabetically)."
    ]
   },
   {
@@ -299,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'0100': ColorSet(cardinality=3), '1100': ColorSet(cardinality=9), '0001': ColorSet(cardinality=3)}\n"
+      "{'1100': ColorSet(cardinality=9), '0100': ColorSet(cardinality=3), '0001': ColorSet(cardinality=3)}\n"
      ]
     }
    ],
@@ -314,17 +324,70 @@
    "metadata": {},
    "source": [
     "Here, for example:\n",
-    "- 9 colors satisfy properties p1+p2\n",
-    "- 3 colors satisfy only p2\n",
-    "- 3 colors satisfy only p4"
+    "- 9 colors satisfy properties `p1` and `p2` simulataneously.\n",
+    "- 3 colors satisfy only `p2`\n",
+    "- 3 colors satisfy only `p4`\n",
+    "- No color satisfies property `p3`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "30179fbe",
+   "id": "44f139c1-1a6c-4273-a307-f68c6dd50bdf",
    "metadata": {},
    "source": [
-    "#### Manually generating classification archives"
+    "### Attractor-based classification\n",
+    "\n",
+    "Another method that can generate a \"classification archive\" is attractor-based classification. Here, we are concerned with the long-term behaviour of the possible network attractors (i.e. stability, oscillation, or disorder), and the absolute number of such attractors. Note that this is mostly equivalent to the analysis workflow originally presented in the online version of [AEON](https://biodivine.fi.muni.cz/aeon/v0.4.0/index.html).\n",
+    "\n",
+    "Here, we don't need to specify any special properties or annotations. However, for convenience, we use the same annotated model as in our previous example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3f1d93b9-dc0b-4a51-ab21-aadc32bcc19e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_attractor_classification(model_path, \"attractor-archive.zip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2036842d-6a0d-43c2-8b3e-5b3cc741372d",
+   "metadata": {},
+   "source": [
+    "We can work with the result of this process in the same way we worked with the HCTL classification result. In particular, you can also visualize this classification using the interactive GUI. Notice that in this case, the class labels are actually the types of attractors encountered in each class, as opposed to HCTL properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "103b9834-9813-4912-b4fe-e7885e880265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'[\"Stability\"]': ColorSet(cardinality=8), '[\"Stability\", \"Stability\"]': ColorSet(cardinality=2), '[\"Disorder\"]': ColorSet(cardinality=6)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "attr_classes, original_model_str = load_class_archive(\"attractor-archive.zip\")\n",
+    "print(attr_classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f602f8b2-9be4-423b-8299-2c6e9fb14b4b",
+   "metadata": {},
+   "source": [
+    "Specifically, we have that:\n",
+    " - 2 colors admit bistable behaviour with two steady states.\n",
+    " - 8 colors admit a single steady state.\n",
+    " - 6 colors admit a single complex disordered attractor."
    ]
   },
   {
@@ -332,27 +395,46 @@
    "id": "af964934",
    "metadata": {},
    "source": [
-    "If you have an arbitrary mapping of `string -> color set` (that can be considered a result of classification), you can generate an archive for it too."
+    "#### Custom classification archives\n",
+    "\n",
+    "Finally, we can also generate classification archives based on completely arbitrary colored sets. However, it is recommended that the sets should be at least pair-wise disjoint, otherwise the interpretation of some of the post-processing results can be complicated. \n",
+    "\n",
+    "In te following example, we simply separate the colors based on the value of two network input variables:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6781d7b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we already have the dictionary `class_mapping`\n",
-    "build_class_archive(class_mapping, \"new_archive.zip\", original_model_str)"
+    "stg = SymbolicAsyncGraph(BooleanNetwork.from_aeon(original_model_str))\n",
+    "dna_on = stg.fix_implicit_function(\"DNA_damage\", [], True)\n",
+    "dna_off = stg.fix_implicit_function(\"DNA_damage\", [], False)\n",
+    "egfr_on = stg.fix_implicit_function(\"EGFR_stimulus\", [], True)\n",
+    "egfr_off = stg.fix_implicit_function(\"EGFR_stimulus\", [], False)\n",
+    "\n",
+    "class_1 = dna_on.intersect(egfr_on)\n",
+    "class_2 = dna_on.intersect(egfr_off)\n",
+    "class_3 = dna_off\n",
+    "\n",
+    "custom_mapping = {\n",
+    "    \"DNA_with_EGFR\": class_1,\n",
+    "    \"DNA_without_EGFR\": class_2,\n",
+    "    \"no_DNA\": class_3\n",
+    "}\n",
+    "\n",
+    "save_class_archive(\"custom-archive.zip\", custom_mapping, stg.network().to_aeon())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99a17da9",
+   "cell_type": "markdown",
+   "id": "569fd17f-c20a-42d4-8671-87ff5843b3bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "If we load the resulting archive into our GUI explorer, we can easily visualise the classification as a tree with two decisions."
+   ]
   }
  ],
  "metadata": {
@@ -371,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
