Minor updates to the documentation and the model checking notebook.

--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "At this point, all model inputs are represented as variables with constant update functions (this representation tends to have the best compatibility with other tools). This is however inefficient for both BDD representation and for the model-checking algorithm.\n",
     "\n",
-    "Instead, constant input variables can be turned into logical parameters. For larger models, this can save a non-trivial amount of computation time, as the model-checking algorithm can deal with these parameters easier than with the state variables.\n",
+    "Instead, constant input variables can be turned into logical parameters. For larger models, this can save a non-trivial amount of computation time, as the model-checking algorithm can deal with these parameters more easily than with the state variables.\n",
     "\n",
     "Keep in mind that AEON refers to the valuations of such parameters as colors: if the model is using any parameters, the result will be a relation over states and corresponding parameter valuations (colors)."
    ]
@@ -153,6 +153,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "948d273a-16fa-4262-8800-3df6e037d2c0",
+   "metadata": {},
+   "source": [
+    "Note that an \"extended\" symbolic graph is still an instance of `SymbolicAsyncGraph`, hence you can still use it for normal BN analysis. The only difference is that it also admits additional symbolic variables that can be used to represent free variables in HCTL (you can inspect these variables using the `SymbolicContext` object)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "61a9c3ef-2175-4b7a-944b-6606738de625",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(SymbolicAsyncGraph(bn).symbolic_context().num_extra_state_variables())\n",
+    "print(stg.symbolic_context().num_extra_state_variables())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7077d677",
    "metadata": {
     "pycharm": {
@@ -174,7 +202,7 @@
    "source": [
     "The HCTL model checker takes a transition graph and dynamic property encoded as an HCTL formula, and computes which state-color pairs (of the transition graph) satisfy the formula. HCTL enables to express a range of important properties regarding the long-term behaviour of the system.\n",
     "\n",
-    "Simple formula can be `EF (p53)`, where `p53` is a variable of the network. Formula simply means \"there exists a path to reach a state with active `p53`\". The model-checking procedure will return all the state-color pairs for which this is true."
+    "A simple example of a formula can be `EF (p53)`, where `p53` is a variable of the network. This formula states that \"there exists a path to reach a state with active `p53`\". The model-checking procedure will return all the state-color pairs for which this is true."
    ]
   },
   {
@@ -186,15 +214,15 @@
     }
    },
    "source": [
-    "To design more useful (and complex) HCTL formulae, we usually use following \"hybrid\" operators (their usage is illustrated later in this notebook):\n",
-    "- a `binder` (`!`) or `exists` (`3`) are quantifiers that \"mark\" a state, which can then be referenced later in the formula\n",
-    "- a `jump` (`@`) allows to jump to the marked state\n",
+    "To design more useful (and complex) HCTL formulae, we usually use the following \"hybrid\" operators (their usage is illustrated later in this notebook):\n",
+    "- A `binder` (`!`) or `exists` (`3`) / `forall` (`V`) are quantifiers that \"mark\" a state, which can then be referenced later in the formula.\n",
+    "- A `jump` (`@`) allows to jump to the marked state.\n",
     "\n",
-    "For example, formula `!{x}: AX {x}` describes precisely fixed-point states (states with self-loops). It will be true for all state-color pairs, such that the state is self-loop for given color. The formula can be understood as:\n",
-    "- bind a current state and name it `x`\n",
-    "- on all paths, the next state must be again `x`\n",
+    "For example, formula `!{x}: AX {x}` describes precisely fixed-point states (states with self-loops). It is true for all state-color pairs, such that the state has a self-loop for the given color. The formula can be understood as:\n",
+    "- Bind a current state and name it `x`.\n",
+    "- On all paths, the next state must be again `x`.\n",
     "\n",
-    "Similarly, formula `3{x}: AX {x}` describes existence of fixed-point states. It will be true for a color, if there exist such state."
+    "Similarly, formula `3{x}: AX {x}` describes existence of fixed-point states. It is true for a color where there exist a fixed-point state."
    ]
   },
   {
@@ -230,7 +258,7 @@
     }
    },
    "source": [
-    "We can use the both the basic AEON functionality and HCTL model checking to check for attractors. However, the model checker allows to check for more detailed properties. It also allows us to specify which attractors we are interested in."
+    "We can use both the basic AEON functionality and HCTL model checking to check for attractors. However, the model checker allows us to check for more detailed properties. It also allows us to specify which attractors we are interested in."
    ]
   },
   {
@@ -247,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d68d41a0",
    "metadata": {
     "pycharm": {
@@ -300,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f7a5f21a",
    "metadata": {
     "pycharm": {
@@ -324,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ae1ed098",
    "metadata": {
     "pycharm": {
@@ -348,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "43fe2c2c",
    "metadata": {
     "pycharm": {
@@ -383,7 +411,7 @@
     "\n",
     "There is also just one color that admits a cyclic attractor. This attractor comprises two states.\n",
     "\n",
-    "And finally, there are two colors that admit more than fixed point. In our case, both of them admit two fixed points."
+    "And finally, there are two colors that admit more than one fixed point. In our case, both of them admit two fixed-points."
    ]
   },
   {
@@ -395,12 +423,12 @@
     }
    },
    "source": [
-    "Let's imagine we are now interested only in fixed-points attractors with active p53."
+    "Let's imagine we are now interested only in fixed-point attractors with `p53` active."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "992de7b9",
    "metadata": {
     "pycharm": {
@@ -466,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1dfae9bf",
    "metadata": {
     "pycharm": {
@@ -496,14 +524,14 @@
     }
    },
    "source": [
-    "The parsing process also supports some renaming techniques or modifications in order to optimize model-checking computation. If you'd prefer to parse the tree exactly as the formula goes (and exclude the modifications), there is another method for that. However, note that trees that are created this way should not be directly passed to the model checking procedure.\n",
+    "The parsing process also supports some renaming techniques or modifications in order to optimize model-checking computation. If you'd prefer to parse the tree exactly as the formula is written (and exclude these modifications), there is another method for that. However, note that trees that are created this way should not be directly passed to the model checking procedure as they can contain unsupported combinations of operators and variables.\n",
     "\n",
-    "We can also analyse the tree in some way, such as compute set of all HCTL variables in the formula."
+    "We can also analyse the syntactic tree in different ways, such as compute the set of all HCTL variables in the formula."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "77315a13",
    "metadata": {
     "pycharm": {
@@ -530,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "30fbac1f",
    "metadata": {
     "pycharm": {
@@ -542,8 +570,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'xx', 'x'}\n",
-      "{'y', 'x'}\n"
+      "{'x', 'xx'}\n",
+      "{'x', 'y'}\n"
      ]
     }
    ],
@@ -566,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "01938a8b",
    "metadata": {
     "pycharm": {
@@ -604,12 +632,12 @@
     }
    },
    "source": [
-    "Model checking can be run directly on the trees (similar way, but instead of suplying formula as a string, a tree is given)."
+    "Model checking can be run directly on the trees (the same method, but instead of supplying formula as a string, a tree is given)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "9e455549",
    "metadata": {
     "pycharm": {
@@ -658,12 +686,12 @@
     }
    },
    "source": [
-    "Let's first evaluate some arbitrary sub-formula. Note that in order to re-use the result of the model-checking procedure in subsequent computation, we must disallow a so called `sanitization` step. This step (which is defaultly active) cleans the underlaying BDDs by removing some potentially redundant symbolic variables. However, these variables are still needed in our case."
+    "Let's first evaluate some arbitrary sub-formula. Note that in order to re-use the result of the model-checking procedure in subsequent computation, we must turn of the so-called `sanitization` step. This step (which is active by default) cleans the underlaying BDDs by removing some potentially redundant symbolic variables using during model checking (see above in the comparison between \"normal\" and \"extended\" STG). However, these variables are still needed in our case."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a19418da",
    "metadata": {
     "pycharm": {
@@ -689,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a44c2e62",
    "metadata": {
     "pycharm": {
@@ -718,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "2dd94e76",
    "metadata": {
     "pycharm": {
@@ -756,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
