Fix few little typos in notebooks, add a note or two.

--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "At this point, all model inputs are represented as variables with constant update functions (this representation tends to have the best compatibility with other tools). This is however inefficient for both BDD representation and for the model-checking algorithm.\n",
     "\n",
-    "Instead, constant input variables can be turned into logical parameters. For larger models, this can save a non-trivial amount of computation time, as the model-checking algorithm can deal with these parameters more easily than with the state variables.\n",
+    "Instead, constant input variables can be turned into logical parameters. For larger models, this can save a non-trivial amount of computation time, as the model-checking algorithm can usually deal with these parameters more easily than with the state variables.\n",
     "\n",
     "Keep in mind that AEON refers to the valuations of such parameters as colors: if the model is using any parameters, the result will be a relation over states and corresponding parameter valuations (colors)."
    ]
@@ -524,7 +524,7 @@
     }
    },
    "source": [
-    "The parsing process also supports some renaming techniques or modifications in order to optimize model-checking computation. If you'd prefer to parse the tree exactly as the formula is written (and exclude these modifications), there is another method for that. However, note that trees that are created this way should not be directly passed to the model checking procedure as they can contain unsupported combinations of operators and variables.\n",
+    "The parsing process also supports some renaming techniques or modifications in order to optimize model-checking computation. If you'd prefer to parse the tree exactly as the formula is written (and exclude these modifications), there is another method for that. However, note that trees that are created this way should not be directly passed to the model-checking procedure as they can contain unsupported combinations of operators and variables.\n",
     "\n",
     "We can also analyse the syntactic tree in different ways, such as compute the set of all HCTL variables in the formula."
    ]
@@ -570,7 +570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'x', 'xx'}\n",
+      "{'xx', 'x'}\n",
       "{'x', 'y'}\n"
      ]
     }
@@ -686,7 +686,7 @@
     }
    },
    "source": [
-    "Let's first evaluate some arbitrary sub-formula. Note that in order to re-use the result of the model-checking procedure in subsequent computation, we must turn of the so-called `sanitization` step. This step (which is active by default) cleans the underlaying BDDs by removing some potentially redundant symbolic variables using during model checking (see above in the comparison between \"normal\" and \"extended\" STG). However, these variables are still needed in our case."
+    "Let's first evaluate some arbitrary sub-formula. Note that in order to re-use the result of the model-checking procedure in subsequent computation, we must turn of the so-called `sanitization` step. This step (which is active by default) cleans the underlaying BDDs by removing some potentially redundant symbolic variables used during model checking (see above in the comparison between \"normal\" and \"extended\" STG). However, these variables are still needed in our case."
    ]
   },
   {
@@ -784,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
