--- a/example/workflow/classification.ipynb
+++ b/example/workflow/classification.ipynb
@@ -227,7 +227,9 @@
    "id": "386a13c7",
    "metadata": {},
    "source": [
-    "We see that assertions are just simple HCTL formulae (in our case a single formula). On the other hand, properties also have names, which are used in post-processing of the classification results."
+    "We see that assertions are just simple HCTL formulae (in our case a single formula). On the other hand, properties also have names, which are used in post-processing of the classification results. \n",
+    "\n",
+    "Notebook `model_checking.ipynb` provides further information on HCTL properties. For detailed HCTL syntax, refer to [this Github page](https://github.com/sybila/biodivine-hctl-model-checker)."
    ]
   },
   {
@@ -309,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1100': ColorSet(cardinality=9), '0100': ColorSet(cardinality=3), '0001': ColorSet(cardinality=3)}\n"
+      "{'1100': ColorSet(cardinality=9), '0001': ColorSet(cardinality=3), '0100': ColorSet(cardinality=3)}\n"
      ]
     }
    ],
@@ -370,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'[\"Stability\"]': ColorSet(cardinality=8), '[\"Stability\", \"Stability\"]': ColorSet(cardinality=2), '[\"Disorder\"]': ColorSet(cardinality=6)}\n"
+      "{'[\"Stability\", \"Stability\"]': ColorSet(cardinality=2), '[\"Disorder\"]': ColorSet(cardinality=6), '[\"Stability\"]': ColorSet(cardinality=8)}\n"
      ]
     }
    ],
@@ -399,7 +401,7 @@
     "\n",
     "Finally, we can also generate classification archives based on completely arbitrary colored sets. However, it is recommended that the sets should be at least pair-wise disjoint, otherwise the interpretation of some of the post-processing results can be complicated. \n",
     "\n",
-    "In te following example, we simply separate the colors based on the value of two network input variables:"
+    "In the following example, we simply separate the colors based on the value of two network input variables:"
    ]
   },
   {
@@ -435,6 +437,14 @@
    "source": [
     "If we load the resulting archive into our GUI explorer, we can easily visualise the classification as a tree with two decisions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd7f62c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -453,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
