Change string representation for attractor classes.

--- a/example/workflow/classification.ipynb
+++ b/example/workflow/classification.ipynb
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'[\"Stability\", \"Stability\"]': ColorSet(cardinality=2), '[\"Disorder\"]': ColorSet(cardinality=6), '[\"Stability\"]': ColorSet(cardinality=8)}\n"
+      "{'1 x Stability': ColorSet(cardinality=8), '2 x Stability': ColorSet(cardinality=2), '1 x Disorder': ColorSet(cardinality=6)}\n"
      ]
     }
    ],
@@ -437,14 +437,6 @@
    "source": [
     "If we load the resulting archive into our GUI explorer, we can easily visualise the classification as a tree with two decisions."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acd7f62c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
