Modify classification messages.

--- a/example/workflow/classification.ipynb
+++ b/example/workflow/classification.ipynb
@@ -269,18 +269,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded all inputs.\n",
-      "Parsing formulae and generating model representation...\n",
-      "Successfully parsed 1 assertions and 4 properties.\n",
-      "Successfully generated model with 18 vars and 4 params.\n",
-      "Model admits 16 concretizations.\n",
-      "Evaluating assertions...\n",
-      "Assertions evaluated.\n",
-      "15 concretizations satisfy all assertions.\n",
-      "Evaluating properties...\n",
-      "Properties evaluated.\n",
-      "Classifying based on model-checking results...\n",
-      "Results saved to classification-archive.zip.\n"
+      "Loaded model and properties out of `mapk-annotated.aeon`.\n",
+      "Parsing formulae and generating symbolic representation...\n",
+      "Successfully parsed all 1 required property (assertion) and all 4 classification properties.\n",
+      "Successfully encoded model with 18 variables and 4 parameters.\n",
+      "Model admits 16 instances.\n",
+      "Evaluating required properties (this may take some time)...\n",
+      "Required properties successfully evaluated.\n",
+      "15 instances satisfy all required properties.\n",
+      "Evaluating classification properties (this may take some time)...\n",
+      "Classification properties successfully evaluated.\n",
+      "Generating classification mapping based on model-checking results...\n",
+      "Results saved to `classification-archive.zip`.\n"
      ]
     }
    ],
@@ -311,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1100': ColorSet(cardinality=9), '0001': ColorSet(cardinality=3), '0100': ColorSet(cardinality=3)}\n"
+      "{'0001': ColorSet(cardinality=3), '0100': ColorSet(cardinality=3), '1100': ColorSet(cardinality=9)}\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1 x Stability': ColorSet(cardinality=8), '2 x Stability': ColorSet(cardinality=2), '1 x Disorder': ColorSet(cardinality=6)}\n"
+      "{'1 x Stability': ColorSet(cardinality=8), '1 x Disorder': ColorSet(cardinality=6), '2 x Stability': ColorSet(cardinality=2)}\n"
      ]
     }
    ],
@@ -437,6 +437,14 @@
    "source": [
     "If we load the resulting archive into our GUI explorer, we can easily visualise the classification as a tree with two decisions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eac81dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
